# Project2020-seq-tensor-sketching

./: .clang-format  .gitignore  .gitmodules  .hgignore  CMakeLists.txt  README.md  experiments_flags  experiments_main.cpp  grid_search.sh  grid_search_main.cpp  multivec.cpp  notes.org  paper_gen.py  script.sh  sequence_generator_main.cpp  sketch_main.cpp  tensor_sketch_main.cpp  viral_main.cpp
.github/workflows/: cmake.yml
cpp/: DTW.cpp  align_fasta.cpp  cross_comp.cpp  dists_pairwise.cpp  dtw.cpp  exp_pairwise.cpp  hierarchical.cpp  long_seqs.cpp  multivec.cpp  recomb_pairwise.cpp  seqgen.cpp  seqtool.cpp  sketch.cpp  test_tensor_disc.cpp  vectool.cpp  vectools.cpp
cpp/experimental/: tensor_slide2.hpp  test_typeinfo.cpp
cpp/legacy/: align_fasta.cpp  cross_comp.cpp  dists_pairwise.cpp  long_seqs.cpp  tensor_disc.hpp  tensor_slide2.hpp  test_tensor_disc.cpp  vectool.cpp  vectool.hpp
experiments/: dists_pairwise.cpp
include/: args.h  args.hpp  common.hpp  distances.hpp  modules.hpp  multivec.h  seq_tools.hpp  seqgen.h  seqgen.hpp  seqtool.hpp  sketch.hpp  subindex.h  timer.h  types.h  utils.h  utils.hpp  vec_tools.hpp  vectool.hpp  vectools.hpp
include/sketch/: minhash.hpp  omh.hpp  tensor.hpp  tensor_disc.hpp  tensor_new.h  tensor_slide.hpp  tuple.hpp  wminhash.hpp
legacy/: align_fasta.cpp  cross_comp.cpp  dists_pairwise.cpp  dtw.cpp  long_seqs.cpp  tensor.hpp  tensor_disc.hpp  tensor_slide.hpp  tensor_slide2.hpp  test_tensor_disc.cpp  test_typeinfo.cpp  vectool.cpp  vectool.hpp
phylogeny/: upgma.cpp  upgma.hpp
python/: Untitled.ipynb  base.py  compare_exons.py  homology.py  init_numba_env.sh  minimizer_test.py  sequence.py  tensor_embedding.py  tensor_sketch.py  tensor_sketch_gpu.py  todo
python/lib/: align.py  base.py  cds.py  data.py  hashing.py  minimizers.py  sequence.py  tensor_embedding.py  tensor_sketch.py  tensor_sketch_gpu.py  util.py
sequence/: alphabets.cpp  alphabets.hpp  fasta_io.hpp  sequence_generator.hpp
sketch/: dim_reduce.h  dim_reduce.hpp  hash_base.cpp  hash_base.hpp  hash_min.hpp  hash_ordered.hpp  hash_weighted.hpp  min_hash.hpp  minhash.hpp  omh.hpp  ordered_min_hash.hpp  sketch_base.hpp  tensor.hpp  tensor2.hpp  tensor2_slide.hpp  tensor_binom.hpp  tensor_block.hpp  tensor_embedding.hpp  tensor_full.hpp  tensor_new.h  tensor_slide.hpp  tensor_slide_flat.hpp  tuple.hpp  weighted_min_hash.hpp  wminhash.hpp
tests/: test_multivec.cpp
tests/phylogeny/: test_upgma.cpp
tests/sketch/: test_hash_base.cpp  test_min_hash.cpp  test_ordered_min_hash.cpp  test_tensor.cpp  test_tensor2.cpp  test_tensor2_slide.cpp  test_tensor_block.cpp  test_tensor_slide.cpp  test_weighted_min_hash.cpp
tests/util/: test_multivec.cpp  test_seqgen.cpp  test_sequence_generator.cpp  test_spearman.cpp  test_util.cpp
util/: Timer.cpp  Timer.hpp  alphabets.hpp  args.hpp  efficient_edit_distance.cpp  fasta.hpp  modules.hpp  multivec.h  multivec.hpp  progress.cpp  progress.hpp  progress_bar.cpp  seqgen.cpp  seqgen.h  seqgen.hpp  spearman.hpp  timer.cpp  timer.h  timer.hpp  transformer.hpp  utils.cpp  utils.h  utils.hpp
